2010-03-19  Eric Ross       <eric.ross.c@gmail.com>
	* include/config_process.php: Fixing warning when no timezone is defined for the user

2010-03-19  Eric Ross       <eric.ross.c@gmail.com>
	Adding support to show and purge data from the log4x table	

	* include/fgraph.php
	* godmode/db/db_main.php
	* godmode/db/db_purge.php

2010-03-18  Eric Ross       <eric.ross.c@gmail.com>

	* operation/agentes/estado_monitores.php: Now the monitors list display the last data
		in a proper way (TRACE, DEBUG, ....)

2010-03-18  Eric Ross       <eric.ross.c@gmail.com>

	* godmode/setup/setup.php: Expanded time zone text box to 25 chars

2010-03-18  Eric Ross       <eric.ross.c@gmail.com>

	Ported old graphics for the log4x data.

	* include/Image/Graph/Plot/Bubble.php: New chart type: bubble
	* include/Image/Graph.php: Add the new bubble chart to the available charts
	* include/functions.php: Refactoring way to get type of graph from module type
	* operation/agentes/estado_ultimopaquete.php: Added links to access log4x graphics 
	* include/fgraph.php: Add log4x graphics rutines.
	* operation/agentes/stat_win.php: Add support to show log4x graphic.

2010-03-17  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php, install.php: change version number.
	* include/functions_ui.php: add in the function "print_page_header" a
	read boolean item "active" in array $buttons for paint disabled.
	* include/functions.php: add function "get_parameterBetweenListValues" this
	function get a parameter for a GET or POST but between a values.
	* godmode/reporting/visual_console_builder.php: added new editors for visual
	console, now it is developing, don't afray.

2010-03-17  Junichi Satoh  <junichi@rworks.jp>

	* operation/messages/message.php : Changed strings.
	"From" to "Message from", "To" to "Message to"

	* godmode/reporting/reporting_builder.php : Changed strings.
	"Down" to "Move down", "Up" to "Move up"
